# riscv-ez

./: .gitignore  Cargo.toml  default.nix
assembler/: Cargo.toml
assembler/src/: config.rs  context.rs  error.rs  lib.rs  logs.rs  main.rs  node.rs  util.rs
assembler/src/assembler/: context.rs  expression.rs  instructions.rs  lang.rs  mnemonics.rs  mod.rs  riscv.rs  translation.rs
assembler/src/expression/: args.rs  conversion.rs  mod.rs  str.rs  value.rs
assembler/src/expression/base/: binop.rs  cast.rs  func.rs  index.rs  mod.rs  numeric.rs  unop.rs
assembler/src/lex/: escape.rs  lexer.rs  mod.rs  number.rs  small_str.rs  str.rs  token.rs
assembler/src/linker/: mod.rs
assembler/src/preprocess/: defined_macro.rs  file.rs  if_else.rs  mod.rs
assembler/src/simple/: mod.rs  state.rs  sub_abstract.rs  sub_impl.rs  super_impl.rs  trans.rs
assembler/src/simple/trans/: data.rs  dbg.rs  display.rs  mod.rs  reloc.rs  section.rs  str.rs  sym.rs
emu/: Cargo.toml
emu/src/: lib.rs
gui/: Cargo.toml
gui/src/: context.rs  files.rs  log.rs  main.rs  tree.rs
gui/src/tabs/: code_editor.rs  mod.rs
mem/: Cargo.toml
mem/src/: lib.rs
riscv_asm/: Cargo.toml
riscv_asm/src/: args.rs  indexed.rs  label.rs  lib.rs  machine.rs  main.rs  opcodes.rs  reg.rs  reloc.rs
testing/: nya.sh  test.c
