[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { version = "*", default-features = false }
eframe = { version = "*", default-features = false, features = [
    "default",
    "default_fonts",
    "glow",
] }
egui_dock = "*"
assembler = {path = "../assembler"}
riscv_asm = {path = "../riscv_asm"}
poll-promise = "*"
egui_ltreeview = "*"